# ELF-PE-Parser

./: CMakeLists.txt  README.md
src/: lef_parser.cpp  main.cpp  model.h  pe_parser.cpp  pe_parser.h
tests/: test_parsers.cpp
